--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,7 +2,7 @@
 
     body {
         background-color: #D0F2F2;
-        width: 375px;
+        width: 100%;
         margin: 0;
         padding: 0;
     }
